<resources>
    <string name="app_name">UI-Demo</string>
    <string name="main_title">HSLU - Mobile Programming</string>
    <string name="main_welcomeText">Willkommen zum zweiten Kursblock!</string>
    <string name="main_section1">1. Layout</string>
    <string name="main_section2">2. Screen-Orientation und Übersetzung</string>
    <string name="main_section3">3. Views und Events</string>
    <string name="main_section4">4. Options-Menu</string>
    <string name="main_section5">5. Spinner und ListActivity</string>
    <string name="main_layoutDemoText">Wähle eines der folgenden Layouts für eine Demo:</string>
    <string name="buttonText_section4">Aktivität mit Demo-Views anzeigen</string>
    <string name="text_section2">Diese Seite hat ein angepasstes Layout für Landscape Mode. Probier es aus! Ausserdem kann sie auch Schweizerdeutsch: Stelle die Sprache im EMulator auf Deutsch (Schweiz) um, und starte die App erneut.</string>
    <string name="text_section4">Diese Seite hat ein Options Menu. Klicke auf den Menu-Button um das Menu anzuzeigen.</string>
</resources>
